database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      serviceAccountName: service-account-deployment2
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sqlserver-volume
          mountPath: /var/opt/mssql 
      volumes:
      - name: sqlserver-volume
        persistentVolumeClaim:
          claimName: local-volume-claim
