database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
  type: ClusterIP
