webapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: ecommerce-api
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001  
  type: NodePort
